objects/APTS_Wizard_Scoring_Config__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>APTS_Question_Type__c</fullName>
        <label>Question Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Score__c</fullName>
        <label>Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Wizard Scoring Config</label>
</CustomObject>